; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_mpc8.c_mpc8_get_mask.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_mpc8.c_mpc8_get_mask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32)* @mpc8_get_mask to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mpc8_get_mask(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %7, align 4
  %8 = load i32, i32* %6, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %23

10:                                               ; preds = %3
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* %5, align 4
  %13 = icmp ne i32 %11, %12
  br i1 %13, label %14, label %23

14:                                               ; preds = %10
  %15 = load i32*, i32** %4, align 8
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* %5, align 4
  %18 = load i32, i32* %6, align 4
  %19 = sub nsw i32 %17, %18
  %20 = call i32 @FFMIN(i32 %16, i32 %19)
  %21 = load i32, i32* %5, align 4
  %22 = call i32 @mpc8_dec_enum(i32* %15, i32 %20, i32 %21)
  store i32 %22, i32* %7, align 4
  br label %23

23:                                               ; preds = %14, %10, %3
  %24 = load i32, i32* %6, align 4
  %25 = shl i32 %24, 1
  %26 = load i32, i32* %5, align 4
  %27 = icmp sgt i32 %25, %26
  br i1 %27, label %28, label %31

28:                                               ; preds = %23
  %29 = load i32, i32* %7, align 4
  %30 = xor i32 %29, -1
  store i32 %30, i32* %7, align 4
  br label %31

31:                                               ; preds = %28, %23
  %32 = load i32, i32* %7, align 4
  ret i32 %32
}

declare dso_local i32 @mpc8_dec_enum(i32*, i32, i32) #1

declare dso_local i32 @FFMIN(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
